--- a/lakefile.toml
+++ b/lakefile.toml
@@ -21,3 +21,19 @@ git = "https://github.com/leanprover/doc-gen4"
 rev = "main"
 [[lean_lib]]
 name = "ClassificationOfSubgroups"
+
+
+# name = "myprojectname"
+# defaultTargets = ["textbook"]
+
+# [[require]]
+# name = "verso"
+# git = "https://github.com/leanprover/verso"
+# rev = "main"
+
+# [[lean_lib]]
+# name = "DemoTextbook"
+
+# [[lean_exe]]
+# name = "textbook"
+# root = "DemoTextbookMain"
