--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,81 +1,31 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover/doc-gen4",
+ [{"url": "https://github.com/PatrickMassot/checkdecls.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "e3f8a871d2beb4264e31eee6e3e4ee504b88638f",
-   "name": "«doc-gen4»",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": false,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/PatrickMassot/checkdecls.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "75d7aea6c81efeb68701164edaaa9116f06b91ba",
+   "rev": "3d425859e73fcfbef85b9638c2a91708ef4a22d4",
    "name": "checkdecls",
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/mathlib4",
+  {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
-   "scope": "leanprover-community",
-   "rev": "5cc756723686948194356014d069fc67bf78a098",
+   "scope": "",
+   "rev": "f897ebcf72cd16f89ab4577d0c826cd14afaafc7",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "v4.24.0",
    "inherited": false,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/mhuisi/lean4-cli",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "a2eb24a3dbf681f2b655f82ba5ee5b139d4a5abc",
-   "name": "Cli",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": true,
-   "configFile": "lakefile.toml"},
-  {"url": "https://github.com/fgdorais/lean4-unicode-basic",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "d890360c960358a42965bdc15defa3fd09feba38",
-   "name": "UnicodeBasic",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/kim-em/BibtexQuery",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "2411c47ee06f2fc986d929e22731c77e61eaadb6",
-   "name": "BibtexQuery",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "bump_to_v4.17.0-rc1",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/acmepjz/md4lean",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "7cf25ec0edf7a72830379ee227eefdaa96c48cfb",
-   "name": "MD4Lean",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9f492660e9837df43fd885a2ad05c520da9ff9f5",
+   "rev": "dfd06ebfe8d0e8fa7faba9cb5e5a2e74e7bd2805",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -95,7 +45,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "90f3b0f429411beeeb29bbc248d799c18a2d520d",
+   "rev": "d768126816be17600904726ca7976b185786e6b9",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -115,7 +65,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9e8de5716b162ec8983a89711a186d13ff871c22",
+   "rev": "725ac8cd67acd70a7beaf47c3725e23484c1ef50",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -125,7 +75,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "2e582a44b0150db152bff1c8484eb557fb5340da",
+   "rev": "dea6a3361fa36d5a13f87333dc506ada582e025c",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -135,8 +85,18 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "6f7d05f4955eb5af9799d828b697251bb2c9c0b8",
+   "rev": "8da40b72fece29b7d3fe3d768bac4c8910ce9bee",
    "name": "batteries",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover/lean4-cli",
+   "type": "git",
+   "subDir": null,
+   "scope": "leanprover",
+   "rev": "91c18fa62838ad0ab7384c03c9684d99d306e1da",
+   "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": true,
